# py-lmd

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  first_collection.xml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_umap.txt  setup.py
.github/workflows/: build_documentation.yml  bump_version.yml  create_release.yml  publish_on_pypi.yml  python-package.yml
docs/: Makefile  conf.py  index.html  index.rst  make.bat  templates
docs/_build/doctrees/: environment.pickle  (+2 more)
docs/_static/: style.css
docs/doctrees/: environment.pickle  index.doctree
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/pages/: api.rst  example_notebooks.rst  installation.rst  modules.rst  quickstart.rst  segmentation_loader.rst
docs/source/: conf.py  index.rst  lmd.rst  modules.rst
docs_source/: Makefile  conf.py  index.rst  templates
docs_source/pages/: example_notebooks.rst
notebooks/: Image_Segmentation.ipynb  Quick_Start.ipynb
notebooks/Image_Segmentation/: Image_Segmentation.ipynb  Image_Segmentation_2.ipynb
notebooks/Quick_Start/: Quick_Start.ipynb
py-lmd/: lmd.py
src/: lmd.py
src/glyphs/: numbers.ai
src/lmd/: __init__.py  _utils.py  conftest.py  lib.py  lmd.py  lmd_test.py  path.py  segmentation.py  tools.py
tests/: test_lib.py  test_lmd.py  test_segmentation.py  test_tools.py
tests/integration/: test_downloads.py  test_integration_segmentation.py  test_segmentation.py
tests/lmd/: test_tools.py
tests/unit/: conftest.py
(+117 files in other folders)
